--- a/src/app/components/user-table/user-table.html
+++ b/src/app/components/user-table/user-table.html
@@ -1,22 +1,24 @@
 <div class="flex flex-col min-h-screen bg-gray-100 p-4">
   <div class="flex gap-4 mb-4">
     <p-button (click)="visible = true"> Filter </p-button>
-    <input fluid type="text" pInputText placeholder="Search..." />
 
     <p-button-group>
-      <p-button>Print</p-button>
-      <p-button>PDF</p-button>
-      <p-button>XLSX</p-button>
-      <p-button>XLS</p-button>
+      <p-button (click)="exportPDF()">PDF</p-button>
+      <p-button (click)="exportXLSX()">XLSX</p-button>
+      <p-button (click)="exportXLS()">XLS</p-button>
     </p-button-group>
-    <div class="pl-2">
-      <p-button icon="pi pi-plus"></p-button>
-    </div>
+
+    <p-button class="pl-2" icon="pi pi-plus" (click)="onNewUser()"></p-button>
   </div>
 
-  <p-table [value]="users" class="w-full shadow-md rounded-lg overflow-hidden">
+  <p-table
+    [value]="(users$ | async) ?? []"
+    [(selection)]="selectedUser"
+    class="w-full shadow-md rounded-lg overflow-hidden"
+  >
     <ng-template pTemplate="header">
       <tr class="bg-gray-100">
+        <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Nickname</th>
@@ -30,6 +32,9 @@
 
     <ng-template pTemplate="body" let-user>
       <tr>
+        <td>
+          <p-tableCheckbox [value]="user" />
+        </td>
         <td>{{ user.firstName }}</td>
         <td>{{ user.lastName }}</td>
         <td>{{ user.nickname }}</td>
@@ -39,95 +44,21 @@
         <td>{{ user.address }}</td>
         <td>
           <p-button-group>
-            <p-button icon="pi pi-pencil"></p-button>
-            <p-button icon="pi pi-trash"></p-button>
+            <p-button (click)="onEdit(user)" icon="pi pi-pencil"></p-button>
+
+            <p-button
+              (click)="delete($event, user.id)"
+              icon="pi pi-trash"
+              severity="danger"
+              [outlined]="true"
+            ></p-button>
           </p-button-group>
         </td>
       </tr>
     </ng-template>
   </p-table>
-  <p-drawer [(visible)]="visible" header="Filter">
-    <form
-      [formGroup]="filterForm"
-      (ngSubmit)="onFilter()"
-      class="flex flex-col gap-4"
-    >
-      <div>
-        <label class="block mb-1 font-medium">First Name</label>
-        <input
-          pInputText
-          formControlName="firstName"
-          placeholder="First Name"
-          fluid
-        />
-      </div>
-
-      <div>
-        <label class="block mb-1 font-medium">Last Name</label>
-        <input
-          pInputText
-          formControlName="lastName"
-          placeholder="Last Name"
-          fluid
-        />
-      </div>
-
-      <div>
-        <label class="block mb-1 font-medium">Nickname</label>
-        <input
-          pInputText
-          formControlName="nickname"
-          placeholder="Nickname"
-          fluid
-        />
-      </div>
-
-      <div>
-        <label class="block mb-1 font-medium">City</label>
-        <p-autoComplete
-          formControlName="city"
-          placeholder="Select a city"
-          fluid
-        />
-      </div>
-
-      <div>
-        <label class="block mb-1 font-medium">Phone</label>
-        <input
-          pInputText
-          formControlName="phone"
-          placeholder="Phone"
-          type="tel"
-          pattern="[0-9]*"
-          fluid
-        />
-      </div>
-
-      <div>
-        <label class="block mb-1 font-medium">Email</label>
-        <input
-          pInputText
-          formControlName="email"
-          placeholder="Email"
-          type="email"
-          fluid
-        />
-      </div>
-
-      <div>
-        <label class="block mb-1 font-medium">Address</label>
-        <input
-          fluid
-          pInputText
-          formControlName="address"
-          placeholder="Street, Apartment"
-        />
-      </div>
-
-      <div class="flex gap-2 mt-2">
-        <p-button type="submit"> Apply Filter </p-button>
-        <p-button type="button" (click)="onClearFilter()"> Clear </p-button>
-      </div>
-    </form>
-  </p-drawer>
+  <p-drawer [(visible)]="visible" header="Filter"><lx-filter /> </p-drawer>
 </div>
+<p-confirmdialog />
+<p-toast />
+<!--<lx-user-edit [(visibleDialog)]="visibleDialog" [user]="chahgeUser" />-->
