--- a/src/app/components/user-edit/show-user.component.html
+++ b/src/app/components/user-edit/show-user.component.html
@@ -1,7 +1,10 @@
-<form [formGroup]="form" (ngSubmit)="onSave()" class="grid grid-cols-2 gap-3">
-  <div class="col-span-1">
-    <label class="block mb-1 font-medium">First Name</label>
+<form [formGroup]="form" (ngSubmit)="onSave()" class="grid grid-cols-2 gap-4">
+  <div class="col-span-2 flex justify-center mb-4">
+    <lx-avatar formControlName="avatar" />
+  </div>
 
+  <div>
+    <label class="block mb-1 font-medium">First Name</label>
     <input
       fluid
       pInputText
@@ -10,12 +13,12 @@
     />
     @if (form.get("firstName")?.hasError("required")) {
       <p-message severity="error" size="small" variant="simple">
-        First Name is required</p-message
-      >
+        First Name is required
+      </p-message>
     }
   </div>
 
-  <div class="col-span-1">
+  <div>
     <label class="block mb-1 font-medium">Last Name</label>
     <input
       fluid
@@ -25,30 +28,28 @@
     />
   </div>
 
-  <div class="col-span-1">
+  <div>
     <label class="block mb-1 font-medium">Nickname</label>
     <input fluid pInputText formControlName="nickname" placeholder="Nickname" />
     @if (form.get("nickname")?.hasError("nicknameTaken")) {
-      <p-message severity="error" size="small" variant="simple"
-        >This nickname is already taken</p-message
-      >
+      <p-message severity="error" size="small" variant="simple">
+        This nickname is already taken
+      </p-message>
     }
     @if (form.get("nickname")?.hasError("required")) {
       <p-message severity="error" size="small" variant="simple">
-        Nickname is required</p-message
-      >
+        Nickname is required
+      </p-message>
     }
   </div>
 
-  <div class="col-span-1">
+  <div>
     <label class="block mb-1 font-medium">City</label>
-
     <lx-cities-autocomplete [citiesControl]="formCities" />
   </div>
 
-  <div class="col-span-1">
+  <div>
     <label class="block mb-1 font-medium">Phone</label>
-
     <input
       fluid
       pInputText
@@ -59,9 +60,8 @@
     />
   </div>
 
-  <div class="col-span-1">
+  <div class="col-span-2">
     <label class="block mb-1 font-medium">Email</label>
-
     <input
       fluid
       pInputText
@@ -71,8 +71,8 @@
     />
     @if (form.get("email")?.hasError("email")) {
       <p-message severity="error" size="small" variant="simple">
-        Enter a valid email</p-message
-      >
+        Enter a valid email
+      </p-message>
     }
   </div>
 
