--- a/src/app/components/user-table/user-table.html
+++ b/src/app/components/user-table/user-table.html
@@ -1,14 +1,19 @@
 <div class="flex flex-col min-h-screen bg-gray-100 p-4">
-  <div class="flex gap-4 mb-4">
-    <p-button (click)="visible = true"> Filter </p-button>
-
-    <p-button-group>
-      <p-button (click)="exportPDF()">PDF</p-button>
-      <p-button (click)="exportXLSX()">XLSX</p-button>
-      <p-button (click)="exportXLS()">XLS</p-button>
-    </p-button-group>
-
-    <p-button class="pl-2" icon="pi pi-plus" (click)="onNewUser()"></p-button>
+  <div class="flex gap-4 mb-4 justify-between items-center">
+    <div class="flex gap-4">
+      <p-button (click)="visible = true"> Filter </p-button>
+    </div>
+    <div class="flex gap-4">
+      <lx-export-button [selectedUser]="selectedUser" />
+      @if (isAdmin) {
+        <p-button
+          class="pl-2"
+          icon="pi pi-plus"
+          (click)="onNewUser()"
+        ></p-button>
+      }
+      <p-button variant="outlined" (click)="onLogout()">Logout</p-button>
+    </div>
   </div>
 
   <p-table
@@ -31,7 +36,9 @@
         <th>Phone</th>
         <th>Email</th>
         <th>Address</th>
-        <th>Actions</th>
+        @if (isAdmin) {
+          <th>Actions</th>
+        }
       </tr>
     </ng-template>
 
@@ -60,18 +67,20 @@
         <td>{{ user.phone }}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.address }}</td>
-        <td>
-          <p-button-group>
-            <p-button (click)="onEdit(user)" icon="pi pi-pencil"></p-button>
+        @if (isAdmin) {
+          <td>
+            <p-button-group>
+              <p-button (click)="onEdit(user)" icon="pi pi-pencil"></p-button>
 
-            <p-button
-              (click)="delete($event, user.id)"
-              icon="pi pi-trash"
-              severity="danger"
-              [outlined]="true"
-            ></p-button>
-          </p-button-group>
-        </td>
+              <p-button
+                (click)="delete($event, user.id)"
+                icon="pi pi-trash"
+                severity="danger"
+                [outlined]="true"
+              ></p-button>
+            </p-button-group>
+          </td>
+        }
       </tr>
     </ng-template>
   </p-table>
