--- a/src/app/components/user-table/user-table.html
+++ b/src/app/components/user-table/user-table.html
@@ -1,20 +1,5 @@
-<div class="flex flex-col min-h-screen bg-gray-100 p-4">
-  <div class="flex gap-4 mb-4 justify-between items-center">
-    <div class="flex gap-4">
-      <p-button (click)="visible = true"> Filter </p-button>
-    </div>
-    <div class="flex gap-4">
-      <lx-export-button [selectedUser]="selectedUser" />
-      @if (isAdmin) {
-        <p-button
-          class="pl-2"
-          icon="pi pi-plus"
-          (click)="onNewUser()"
-        ></p-button>
-      }
-      <p-button variant="outlined" (click)="onLogout()">Logout</p-button>
-    </div>
-  </div>
+<div class="flex flex-col min-h-screen bg-gray-100 p-4 gap-2">
+  <p-menubar class="mb-2" [model]="items"></p-menubar>
 
   <p-table
     [value]="(users$ | async) ?? []"
@@ -26,12 +11,14 @@
         <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
         <th>Avatar</th>
         <th pSortableColumn="firstName">
-          First Name <p-sortIcon field="code" />
+          First Name <p-sortIcon field="firstName" />
         </th>
         <th pSortableColumn="lastName">
-          Last Name <p-sortIcon field="code" />
+          Last Name <p-sortIcon field="lastName" />
         </th>
-        <th pSortableColumn="nickname">Nickname <p-sortIcon field="code" /></th>
+        <th pSortableColumn="nickname">
+          Nickname <p-sortIcon field="nickname" />
+        </th>
         <th>City</th>
         <th>Phone</th>
         <th>Email</th>
