--- a/src/app/components/user-edit/show-user.component.html
+++ b/src/app/components/user-edit/show-user.component.html
@@ -11,7 +11,7 @@
       formControlName="firstName"
       placeholder="First Name"
     />
-    @if (form.get("firstName")?.hasError("required")) {
+    @if (formFirstName.hasError("required") && formFirstName.touched) {
       <p-message severity="error" size="small" variant="simple">
         First Name is required
       </p-message>
@@ -31,14 +31,17 @@
   <div>
     <label class="block mb-1 font-medium">Nickname</label>
     <input fluid pInputText formControlName="nickname" placeholder="Nickname" />
-    @if (form.get("nickname")?.hasError("nicknameTaken")) {
+    @if (formNickName.touched) {
       <p-message severity="error" size="small" variant="simple">
-        This nickname is already taken
-      </p-message>
-    }
-    @if (form.get("nickname")?.hasError("required")) {
-      <p-message severity="error" size="small" variant="simple">
-        Nickname is required
+        @if (formNickName.hasError("nicknameTaken")) {
+          This nickname is already taken
+        }
+        @if (formNickName.hasError("required")) {
+          Nickname is required
+        }
+        @if (formNickName.hasError("minlength")) {
+          Minimum 3 characters
+        }
       </p-message>
     }
   </div>
@@ -58,6 +61,11 @@
       placeholder="Phone"
       type="tel"
     />
+    @if (formPhone.hasError("pattern") && formPhone.touched) {
+      <p-message severity="error" size="small" variant="simple">
+        Phone must be exactly 10 digits
+      </p-message>
+    }
   </div>
 
   <div class="col-span-2">
@@ -69,7 +77,7 @@
       placeholder="Email"
       type="email"
     />
-    @if (form.get("email")?.hasError("email")) {
+    @if (formEmail.touched && formEmail.hasError("email")) {
       <p-message severity="error" size="small" variant="simple">
         Enter a valid email
       </p-message>
@@ -87,7 +95,7 @@
   </div>
 
   <div class="col-span-2 flex justify-end gap-2 pt-2">
-    <p-button type="submit" label="Apply" />
+    <p-button type="submit" [disabled]="form.invalid" label="Apply" />
     <p-button
       type="button"
       severity="secondary"
